# PptxAgent

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test.py
backend/: Dockerfile  pyproject.toml
backend/app/backend/: main.py
backend/app/backend/api/: dependencies.py
backend/app/backend/api/endpoins/: chat.py  file.py  user.py
backend/app/backend/services/: agent.py  storage.py
backend/src/: checkpointer.py  middleware.py  prompts.py  schema.py  test_agent.py
backend/src/agents/: research_agent.py
backend/src/tools/: __init__.py  research_agent_tools.py
backend/src/utils/: logger_setup.py  settings.py
frontend/: Dockerfile
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ChatInput.tsx  ChatMessage.tsx  ChatSidebar.tsx
frontend/app/utils/: cookies.ts
src/agents/: __init__.py  main_graph.py  planner_agent.py  prompts.py  research_agent.py
src/agents/tools/: __init__.py  planning_tool.py  research_agent_tools.py
src/utils/: __init__.py  langsmith_setup.py  settings.py
