[project]
name = "pptxagent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "asyncddgs>=0.1.0a1",
    "bs4>=0.0.2",
    "deepagents>=0.2.8",
    "langchain-openai>=1.1.0",
    "markdownify>=1.2.2",
    "pydantic-settings>=2.12.0",
]
